--- a/staff/francisco-fernandez/kanban-app/public/style.sass
+++ b/staff/francisco-fernandez/kanban-app/public/style.sass
@@ -74,8 +74,8 @@ body
 
 .post 
     background-color: #b2f96b
-    width: 150px
-    height: 150px
+    width: 200px
+    height: 200px
     margin: 10px
     border-radius: 10px
 
@@ -83,8 +83,8 @@ body
 .post__textarea
     background: transparent
     border: none
-    width: 145px
-    height: 115px
+    width: 190px
+    height: 140px
     resize: none
 
 .post__buttons
@@ -97,6 +97,9 @@ body
 .post__select
     background-color: #b2f96b
     border: none
+
+.post__dropdown
+    @extend .post__select
 
 .fa-sticky-note 
     color: #b2f96b
