--- a/staff/francisco-fernandez/kanban-app/public/style.css
+++ b/staff/francisco-fernandez/kanban-app/public/style.css
@@ -50,16 +50,16 @@ body {
 
 .post {
   background-color: #b2f96b;
-  width: 150px;
-  height: 150px;
+  width: 200px;
+  height: 200px;
   margin: 10px;
   border-radius: 10px; }
 
 .post__textarea {
   background: transparent;
   border: none;
-  width: 145px;
-  height: 115px;
+  width: 190px;
+  height: 140px;
   resize: none; }
 
 .post__buttons {
@@ -69,7 +69,7 @@ body {
   background-color: transparent;
   border: none; }
 
-.post__select {
+.post__select, .post__dropdown {
   background-color: #b2f96b;
   border: none; }
 
