--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/template/profile.html
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/template/profile.html
@@ -68,33 +68,24 @@
                 <p>New password <input> </p>
                 <p>Repeat new password<input></p>
                 <p>Old Password<input></p>
-
+                <h3>You</h3>
+                <p>Your Sex <input> </p>
+                <p>Your Age <input> </p>
+                <p>City <input></p>
+                <p><a>Your presentation</a></p>
+                <h3>You are looking for...</h3>
+                <p>Min age <input></p>
+                <p>Max age <input> </p>
+                
                 <p><a class='button'>Submit changes</a></p>
             </form>
         </section>
 
         <section>
-            <h1 class='subtitle'>Edit your configuration</h1>
-        </section>
-
-        <section class='login'>
-            <form class='login__form'>
-                <h3>You</h3>
-                <p>Your Sex <input> </p>
-                <p>Your Age <input> </p>
-                <p>City <input></p>
-                <p>Province<input></p>
-                <p><a>Add photo 1</a></p>
-                <p><a>Add photo 2</a></p>
-                <p><a>Add photo 3</a></p>
-                <p><a>Your presentation</a></p>
-                <h3>You are looking for...</h3>
-                <p>Min age <input></p>
-                <p>Max age <input> </p>
-                <p>City/Province <input></p>
-
-                <p><a class='button'>Submit changes</a></p>
-            </form>
+            <h3>Add photos</h3>
+            <a>photo 1</a>
+            <a>photo 2</a>
+            <a>photo 3</a>
         </section>
 
     </main>
