adding retrieving photos

--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/template/register.html
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/template/register.html
@@ -65,10 +65,16 @@
             <form class='login__form'>
                 <p>Name <input> </p> 
                 <p>Surname <input> </p>
-                <p>Username <input> </p> 
+                <p>Username <input> </p>
                 <p>Password <input> </p> 
+                <p>Sex <input> </p>
+                <p>Age <input> </p>
+                <p>City <input> </p>
+                <p>Presentation <textarea></textarea> </p>
+                <p>Min Age <input> </p>
+                <p>Max Age <input> </p> 
                 
-                <p><a class='button'>Login</a></p>
+                <p><a class='button'>Register</a></p>
             </form>
 
             
