--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/index.sass
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/index.sass
@@ -1,7 +1,11 @@
-
+.candidates
+    background-color: white
+    
 .subtitle
     margin-left: auto
     margin-right: auto
+    margin-top: 0px
+    padding-top: 10px
     width: 80%
 
 .presentation
