--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/styles.sass
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/styles.sass
@@ -8,6 +8,7 @@
 
 body 
     font-family: 'Signika', sans-serif
+    background-color: $background_header_footer
 
 header
     background-color: $background_header_footer
@@ -82,7 +83,7 @@ footer
     text-align: center
     padding-top: 15px
     padding-bottom: 15px
-    margin-top: 30px
+    margin-top: 0px
 
 
     
