--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/template/index.html
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/template/index.html
@@ -54,7 +54,7 @@
 
   </header>
 
-  <main>
+  <main class='candidates'>
 
     <section>
       <h3 class= 'subtitle'>Say something interesting, funny...</h3>
