--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/template/profile.html
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/template/profile.html
@@ -83,9 +83,9 @@
 
         <section>
             <h3>Add photos</h3>
-            <a>photo 1</a>
-            <a>photo 2</a>
-            <a>photo 3</a>
+            <button>photo 1</button>
+            <button>photo 2</button>
+            <button>photo 3</button>
         </section>
 
     </main>
