--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/messages.sass
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/messages.sass
@@ -1,3 +1,6 @@
+.messages__page
+    background-color: $landing_color
+    
 .messages
     margin-left: auto
     margin-right: auto
@@ -7,6 +10,7 @@
     overflow-y: scroll
     max-height: 250px
     margin-bottom: 10px
+    background-color: white
 
 .messages__name
     @extend .presentation
