--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles.css
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles.css
@@ -77,6 +77,9 @@ ul {
   height: 80%;
   padding-bottom: 15px; }
 
+.messages__page {
+  background-color: #78CD00; }
+
 .messages {
   margin-left: auto;
   margin-right: auto;
@@ -85,7 +88,8 @@ ul {
   border-radius: 5px;
   overflow-y: scroll;
   max-height: 250px;
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  background-color: white; }
 
 .messages__name {
   color: #EF5C92;
