--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/contacts.sass
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/contacts.sass
@@ -1,8 +1,12 @@
-
-
+.contacts
+    background-color: $landing_color
+    
 .contacts__container
     display: flex
     flex-flow: row wrap
+    background-color: $landing_color
+
+
 
 .contact
     margin-left: auto
