--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/messages.sass
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/messages.sass
@@ -8,7 +8,7 @@
     border: 1px solid $background_header_footer
     border-radius: 5px
     overflow-y: scroll
-    max-height: 250px
+    height: 250px
     margin-bottom: 10px
     background-color: white
 
