--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles.css
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles.css
@@ -128,6 +128,22 @@ ul {
   display: flex;
   justify-content: space-around; }
 
+.imgmini {
+  height: 60px;
+  weight: 30px;
+  padding-left: 10px; }
+
+.messages__head {
+  padding-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+  display: flex; }
+
+.messages__name {
+  align-self: right;
+  padding-left: 20px; }
+
 .landing {
   background-color: #78CD00;
   text-align: center;
