--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/messages.sass
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/messages.sass
@@ -47,4 +47,21 @@
 .button_send
     display: flex
     justify-content: space-around
+
+.imgmini
+    height: 60px
+    weight: 30px
+    padding-left: 10px
+
+.messages__head
+    padding-top: 20px
+    margin-left: auto
+    margin-right: auto
+    width: 80%
+    display: flex
+    
+
+.messages__name
+    align-self: right
+    padding-left: 20px
     
