--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/styles.sass
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/styles.sass
@@ -1,10 +1,11 @@
 @import "reset"
 @import "colors"
-@import "index"
+@import "candidates"
 @import "contacts"
 @import "messages"
 @import "landing"
 @import "login"
+@import "photos"
 
 body 
     font-family: 'Signika', sans-serif
@@ -17,6 +18,11 @@ header
 
 h3 
     color: $background_header_footer
+
+.error
+    color: red
+    font-weight: bold
+    text-align: center
 
 .header__logo
     padding-left: 20px
