--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles.css
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles.css
@@ -165,11 +165,22 @@ ul {
   text-align: justify;
   margin-left: auto;
   margin-right: auto;
-  width: 80%; }
+  width: 80%;
+  height: 400px; }
+
+.login {
+  height: 400px; }
 
 .login__form {
   display: flex;
   flex-direction: column; }
+
+.photos {
+  background-color: white;
+  padding-top: 20px; }
+
+.img_footer {
+  text-align: center; }
 
 body {
   font-family: "Signika", sans-serif;
@@ -182,6 +193,11 @@ header {
 
 h3 {
   color: #48484A; }
+
+.error {
+  color: red;
+  font-weight: bold;
+  text-align: center; }
 
 .header__logo {
   padding-left: 20px;
