--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/colors.sass
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/colors.sass
@@ -1,4 +1,7 @@
-$background_header_footer: #48484A
-$text_header: #EBEEF4
+// $background_header_footer: #48484A
+$lets-talk-grey: #48484A
+// $text_header: #EBEEF4
+$lets-talk-white: #EBEEF4
 $logo: #EF5C92
-$landing_color: #78CD00
+// $landing_color: #78CD00
+$lets_talk_green: #BCED74
