--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/landing.sass
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/landing.sass
@@ -1,14 +1,23 @@
 .landing
-    background-color: $landing_color
+    background-color: $lets_talk_green
     text-align: center
-    color: $text_header
+    color: $lets-talk-grey
+    padding-bottom: 30px
+
+.landing__subtitle
+    padding-top: 20px
+    margin-top: 0px
 
 .landing__instructions
     text-align: justify
     margin-left: auto
     margin-right: auto
-    width: 80%
-    height: 400px
+    padding-left: 5px
+    padding-right: 5px
+    width: 90%
+    height: 370px
+    border: 2px solid $lets-talk-grey
+    border-radius: 10px
     
     
 
