--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/messages.sass
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/messages.sass
@@ -1,11 +1,12 @@
 .messages__page
-    background-color: $landing_color
+    background-color: $lets_talk_white
+    padding-bottom: 15px
     
 .messages
     margin-left: auto
     margin-right: auto
     width: 80%
-    border: 1px solid $background_header_footer
+    border: 1px solid $lets-talk-grey
     border-radius: 5px
     overflow-y: scroll
     height: 250px
@@ -18,16 +19,7 @@
     text-align: center
     border: none
 
-.message
-    @extend .presentation
-    color: $background_header_footer
-    text-align: justify
-    border: none
-    
 
-.message__name
-    font-weight: bold
-    color: $logo
 
 .new-message 
     display: flex
@@ -35,18 +27,28 @@
     margin-left: auto
     margin-right: auto
     width: 80%
-    border: 1px solid $background_header_footer
-    border-radius: 5px
-    margin-bottom: 10px
+    pading-bottom: 10px
 
 .new-message__text
     width: 100%
     height: 100px
     border: none
+    border: 1px solid $lets-talk-grey
+    border-radius: 5px
+    margin-bottom: 5px
 
 .button_send
     display: flex
     justify-content: space-around
+
+.message__button
+    border: 1px solid $lets-talk-grey
+    border-radius: 5px
+    padding: 10px
+    color: $lets-talk-grey
+    background-color: $lets-talk-green
+    margin: 3px
+      
 
 .imgmini__container
     width: 70px
