--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/register.sass
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/register.sass
@@ -1,28 +1,27 @@
-.login
+.register
     background-color: $lets_talk_white
     text-align: left
     padding-left: 10%
     padding-right: 10%
     color: $lets-talk-grey
-    height: 460px
+    padding-bottom: 30px
+    
 
-.login__section
+.register__input
+    margin-bottom: 10px
+
+.regist__textarea
+    height: 150px
+
+.register__section
     border: 2px solid $lets-talk-grey
     border-radius: 10px
     padding: 20px
-    
-.login__form
-    display: flex
-    flex-direction: column
 
-.login__input
-    margin-bottom: 10px
-
-.login__button
+.register__button
     border: 1px solid $lets-talk-white
     border-radius: 5px
     padding: 10px
     color: $lets-talk-grey
     background-color: $lets-talk-green
-    
     
