--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/styles.sass
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/styles.sass
@@ -6,90 +6,22 @@
 @import "landing"
 @import "login"
 @import "photos"
+@import "profile"
+@import "footer"
+@import "navbar"
+@import "register"
+@import "threads"
 
 body 
     font-family: 'Signika', sans-serif
-    background-color: $background_header_footer
-
-header
-    background-color: $background_header_footer
-    display: flex
-    justify-content: space-between
-
-h3 
-    color: $background_header_footer
-
-.error
-    color: red
-    font-weight: bold
-    text-align: center
-
-.header__logo
-    padding-left: 20px
-    display: flex
-    justify-content: center
-    align-items: center
-
-.header__title
-    color: #EBEEF4
+    background-color: $lets-talk-grey
 
 
-.fa-hand-holding-heart
-    color: $logo
-    font-size: 300%
-
-.header__menu
-    display: flex
-    justify-content: center
-    align-items: center
-
-.dropbtn 
-    background-color: transparent
-    color: $text_header
-    padding: 16px
-    font-size: 16px
-    border: 1px solid $text_header
-    border-radius: 5px
-
-.dropdown 
-    position: relative
-    display: inline-block
-    padding-right: 20px
-    
 
 
-.dropdown-content 
-    display: none
-    position: absolute
-    background-color: $background_header_footer
-    min-width: 160px
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2)
-    z-index: 1
 
 
-.dropdown-content a 
-    color: $text_header
-    padding: 12px 16px
-    text-decoration: none
-    display: block
 
-
-.dropdown-content a:hover 
-    background-color: $background_header_footer
-
-.dropdown:hover .dropdown-content 
-    display: block
-
-.dropdown:hover .dropbtn 
-    background-color: $background_header_footer
-
-footer 
-    background-color: $background_header_footer
-    color: $logo
-    text-align: center
-    padding-top: 15px
-    padding-bottom: 15px
-    margin-top: 0px
 
 
     
