--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/candidates.sass
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/candidates.sass
@@ -16,6 +16,14 @@
     border: 1px solid $lets-talk-grey
     border-radius: 5px
 
+.presentation__header
+    color: $logo
+    text-align: center
+    font-weight: bold
+    margin-top: 0px
+    padding-top: 10px
+    width: 80%
+
 .presentation__name
     @extend .presentation
     color: $logo
@@ -50,4 +58,9 @@
     color: $lets-talk-grey
     background-color: $lets-talk-green
     margin: 3px
+
+.presentation__alert
+    color: $logo
+    text-align: center
+    font-weight: bold
 
