--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/navbar.sass
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/navbar.sass
@@ -7,8 +7,6 @@ header
     box-shadow: 10px 15px 
     
     
-
-    
 h3 
     color: $lets-talk-grey
 
@@ -23,6 +21,15 @@ h3
     justify-content: center
     align-items: center
 
+.header__alert
+    display: flex
+    justify-content: center
+    align-items: center
+    
+.fa-envelope
+    color: $logo
+    font-size: 150%
+
 .header__title
     color: #EBEEF4
 
@@ -35,6 +42,12 @@ h3
     display: flex
     justify-content: center
     align-items: center
+    flex-direction: column
+    padding-right: 20px
+
+.header__label
+    color: $lets-talk-white
+    padding-bottom: 5px
 
 .dropbtn 
     background-color: transparent
@@ -55,7 +68,7 @@ h3
 .dropdown 
     position: relative
     display: inline-block
-    padding-right: 20px
+    
     
 
 
