--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/styles.sass
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/styles.sass
@@ -13,7 +13,7 @@
 @import "threads"
 
 body 
-    font-family: 'Signika', sans-serif
+    font-family: 'Product Sans Regular', sans-serif
     background-color: $lets-talk-grey
 
 
