--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles.css
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles.css
@@ -28,6 +28,14 @@ ul {
   border: 1px solid #48484A;
   border-radius: 5px; }
 
+.presentation__header {
+  color: #EF5C92;
+  text-align: center;
+  font-weight: bold;
+  margin-top: 0px;
+  padding-top: 10px;
+  width: 80%; }
+
 .presentation__name {
   color: #EF5C92;
   text-align: center;
@@ -59,6 +67,11 @@ ul {
   color: #48484A;
   background-color: #BCED74;
   margin: 3px; }
+
+.presentation__alert {
+  color: #EF5C92;
+  text-align: center;
+  font-weight: bold; }
 
 .contacts {
   background-color: #EBEEF4;
@@ -309,6 +322,15 @@ h3 {
   justify-content: center;
   align-items: center; }
 
+.header__alert {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+.fa-envelope {
+  color: #EF5C92;
+  font-size: 150%; }
+
 .header__title {
   color: #EBEEF4; }
 
@@ -319,7 +341,13 @@ h3 {
 .header__menu {
   display: flex;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  flex-direction: column;
+  padding-right: 20px; }
+
+.header__label {
+  color: #EBEEF4;
+  padding-bottom: 5px; }
 
 .dropbtn {
   background-color: transparent;
@@ -338,8 +366,7 @@ h3 {
 
 .dropdown {
   position: relative;
-  display: inline-block;
-  padding-right: 20px; }
+  display: inline-block; }
 
 .dropdown-content {
   display: none;
@@ -406,7 +433,7 @@ h3 {
   color: #EF5C92; }
 
 body {
-  font-family: "Signika", sans-serif;
+  font-family: "Product Sans Regular", sans-serif;
   background-color: #48484A; }
 
 /*# sourceMappingURL=styles.css.map */
