--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/contacts.sass
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/contacts.sass
@@ -50,7 +50,17 @@
         object-fit: cover
         object-position: center center
 
+@media (min-width: 768px)
 
+    .contact
+        width: 40%
+         
+
+@media (min-width: 1024px)
+
+    .contact
+        width: 30%
+    
     
     
     
