--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/login.sass
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/login.sass
@@ -17,6 +17,7 @@
 
 .login__input
     margin-bottom: 10px
+    max-width: 300px
 
 .login__button
     border: 1px solid $lets-talk-white
@@ -24,5 +25,18 @@
     padding: 10px
     color: $lets-talk-grey
     background-color: $lets-talk-green
+
+@media (min-width: 768px)
+
+    .login
+        padding-left: 20%
+        padding-right: 20%
+         
+
+@media (min-width: 1024px)
+
+    .login
+        padding-left: 30%
+        padding-right: 30%
     
     
