--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/profile.sass
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/profile.sass
@@ -9,6 +9,7 @@
 
 .profile__input
     margin-bottom: 10px
+    max-width: 300px
 
 .profile__textarea
     height: 150px
@@ -48,4 +49,17 @@
         height: 100%
         object-fit: cover
         object-position: center center
+
+@media (min-width: 768px)
+
+    .profile
+        padding-left: 20%
+        padding-right: 20%
+         
+
+@media (min-width: 1024px)
+
+    .profile
+        padding-left: 30%
+        padding-right: 30%
     
