--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/register.sass
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/register.sass
@@ -9,6 +9,7 @@
 
 .register__input
     margin-bottom: 10px
+    max-width: 300px
 
 .regist__textarea
     height: 150px
@@ -24,4 +25,17 @@
     padding: 10px
     color: $lets-talk-grey
     background-color: $lets-talk-green
+
+@media (min-width: 768px)
+
+    .register
+        padding-left: 20%
+        padding-right: 20%
+         
+
+@media (min-width: 1024px)
+
+    .register
+        padding-left: 30%
+        padding-right: 30%
     
