--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/threads.sass
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/threads.sass
@@ -1,9 +1,16 @@
 .message
-    @extend .presentation
+    margin-left: auto
+    margin-right: auto
+    width: 90%
+    border: 1px solid $lets-talk-grey
+    border-radius: 5px
+    overflow-y: scroll
+    margin-bottom: 10px
+    background-color: white
     color: $lets-talk-grey
     text-align: justify
     border: none
-    max-width: 90%
+    overflow: hidden
     
 
 .message__paragraph
