--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/landing.sass
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/landing.sass
@@ -18,6 +18,17 @@
     height: 370px
     border: 2px solid $lets-talk-grey
     border-radius: 10px
-    
+
+@media (min-width: 768px)
+
+    .landing__instructions
+        width: 70%
+        
+
+@media (min-width: 1024px)
+
+    .landing__instructions
+        width: 50%
+  
     
 
