--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/styles.sass
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/styles.sass
@@ -11,6 +11,7 @@
 @import "navbar"
 @import "register"
 @import "threads"
+@import "photos"
 
 body 
     font-family: 'Product Sans Regular', sans-serif
