--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/photos.sass
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/photos.sass
@@ -1,5 +1,26 @@
 .photos
     background-color: white
     padding-top: 20px
+    display: flex
+    text-align: center
+    flex-direction: column
+
 .img_footer
     text-align: center
+
+.photos__img__container
+    width: 280px
+    height: 280px
+    background: none
+    overflow: hidden
+    margin: auto
+
+.photos__image
+    width: 100%
+    height: auto
+
+@supports(object-fit: cover)
+    .photos__image
+        height: 100%
+        object-fit: cover
+        object-position: center center
