--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles.css
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles.css
@@ -296,11 +296,30 @@ ul {
     padding-right: 30%; } }
 .photos {
   background-color: white;
-  padding-top: 20px; }
+  padding-top: 20px;
+  display: flex;
+  text-align: center;
+  flex-direction: column; }
 
 .img_footer {
   text-align: center; }
 
+.photos__img__container {
+  width: 280px;
+  height: 280px;
+  background: none;
+  overflow: hidden;
+  margin: auto; }
+
+.photos__image {
+  width: 100%;
+  height: auto; }
+
+@supports(object-fit: cover) {
+  .photos__image {
+    height: 100%;
+    object-fit: cover;
+    object-position: center center; } }
 .profile {
   background-color: #EBEEF4;
   text-align: left;
@@ -340,7 +359,8 @@ ul {
   width: 280px;
   height: 280px;
   background: none;
-  overflow: hidden; }
+  overflow: hidden;
+  margin: auto; }
 
 .profile__image {
   width: 100%;
@@ -560,6 +580,32 @@ h3 {
   font-weight: bold;
   color: #EF5C92; }
 
+.photos {
+  background-color: white;
+  padding-top: 20px;
+  display: flex;
+  text-align: center;
+  flex-direction: column; }
+
+.img_footer {
+  text-align: center; }
+
+.photos__img__container {
+  width: 280px;
+  height: 280px;
+  background: none;
+  overflow: hidden;
+  margin: auto; }
+
+.photos__image {
+  width: 100%;
+  height: auto; }
+
+@supports(object-fit: cover) {
+  .photos__image {
+    height: 100%;
+    object-fit: cover;
+    object-position: center center; } }
 body {
   font-family: "Product Sans Regular", sans-serif;
   background-color: #48484A; }
