--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/contacts.sass
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/contacts.sass
@@ -20,8 +20,16 @@
     border: 1px solid $lets-talk-grey
     border-radius: 5px
     margin-bottom: 20px
-    
-   
+    text-align: center
+
+.contact__button
+    border: 1px solid $lets-talk-grey
+    border-radius: 5px
+    padding: 10px
+    color: $lets-talk-grey
+    background-color: $lets-talk-green
+    margin: 3px
+    margin-bottom: 10px
 
 .contact__name
     @extend .contact
