--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/candidates.sass
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/styles-sass/candidates.sass
@@ -1,6 +1,6 @@
 .candidates
     background-color: $lets-talk-white
-    height: 400px
+    min-height: 400px
     
 .subtitle
     margin-left: auto
@@ -43,7 +43,7 @@
     color: $lets-talk-grey
     text-align: justify
     border: none
-    height: 100px
+    height: 200px
 
 .presentation__buttons
     @extend .presentation
